--- a/sunnyside-agency-landing-page/css/style.css
+++ b/sunnyside-agency-landing-page/css/style.css
@@ -1,12 +1,15 @@
 .header-background{
-    max-width: 100%;
+    width: 100%;
     z-index: 1;
     position: absolute;
+    height: 100%;
 }
 .header-menu{
     display: flex;
     flex-direction: row;
     row-gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 .header-content{
     display: flex;
@@ -14,20 +17,41 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 10px;
+    width: 100%;
+}
+.main-title{
+    z-index: 2;
+    display: flex;
+    justify-items: center;
+    color: white;
+    font-family: 'Fraunces', sans-serif;
+    font-weight: 900;
+    font-size: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#icon-arrow-down{
+    height: 150px;
+    width: 50px;
 }
 .title{
-    font-family: 'Fraunces', sans-serif;
-    font-weight:bolder;
-    font-size: 30px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 900;
+    font-size: 50px;
     color: white;
+    margin-left: 10px;
 }
 .menu-option{
     font-family: 'Barlow', sans-serif;
     font-weight:bolder;
-    font-size: 15px;
+    font-size: 25px;
     color: white;
     margin-right: 10px;
     margin-left: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: default;
 }
 body{
     padding:0%;
@@ -38,4 +62,5 @@ body{
     margin: 0px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
